--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    margin: 50px 200px 50px 200px;
-    background: rgb(23,57,85);
-    background: linear-gradient(90deg, rgba(23,57,85,1) 0%, rgba(40,40,78,1) 100%);
+
+    background: rgb(23, 57, 85);
+    background: linear-gradient(90deg, rgba(23, 57, 85, 1) 0%, rgba(40, 40, 78, 1) 100%);
     font-family: Arial;
 }
 
-section {
-    float: left;
-    width: 40%;
-}
-
-aside {
-    width: 60%;
-    float: right;
-}
 
 p {
     margin-top: 30px;
@@ -28,18 +24,25 @@ li {
     color: #df61ee;
 }
 
-img {
-    width: 600px;
-}
-
 a {
     text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+nav {
+    background: rgb(23, 57, 85);
+    background: linear-gradient(90deg, rgba(23, 57, 85, 1) 0%, rgba(40, 40, 78, 1) 100%);
+    padding: 20px;
 }
 
 nav a {
     text-decoration: none;
     color: #df61ee;
     font-size: 20px;
+    font-weight: bold;
     padding: 20px;
 }
 
@@ -47,14 +50,16 @@ nav a:hover {
     background-color: #6c52b3;
     color: #37c2fd;
 }
+
 header h1 {
     margin-top: 50px;
 }
+
 footer {
-    margin-top: 800px;
+    margin-top: 80px;
     padding: 40px;
-    background: rgb(23,57,85);
-background: radial-gradient(circle, rgba(23,57,85,1) 0%, rgba(40,40,78,1) 100%);
+    background: rgb(23, 57, 85);
+    background: radial-gradient(circle, rgba(23, 57, 85, 1) 0%, rgba(40, 40, 78, 1) 100%);
 }
 
 footer a {
@@ -62,42 +67,120 @@ footer a {
     color: white;
     font-weight: bold;
 }
+
+header {
+    padding: 0px 200px 300px 200px;
+    background-image: url(../img/cyberpunk-rain-city-pixel-thumb.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.hero {
+    margin-top: 100px;
+}
+
+.hero h1,
+.hero p {
+    background-color: #183955;
+    text-align: center;
+    padding: 5px;
+    box-shadow: 5px 10px #28284e;
+}
+
+.hero h1 {
+    font-size: 50px;
+    font-weight: bold;
+    margin: 0 200px 0 200px;
+
+}
+
+.hero p {
+    font-size: 20px;
+}
+
 .flex {
+    display: flex;
+}
+
+.info-card {
     width: 400px;
     margin: auto;
     border: 5px solid #6c52b3;
     border-radius: 25px;
     background-color: #173955;
     padding: 0;
-    
-   
-  }
-  .flex ul {
+    margin-top: -140px;
+
+
+}
+
+.info-card ul {
     list-style: none;
-  }
-  .flex ul li, ul li {
+}
+
+.info-card ul li,
+ul li {
     padding: 10px;
     padding-top: 0px;
-  }
-  .flex h2 {
-     text-align: center;
-  }
-  .flex h3 {
+}
+
+.info-card h2 {
+    text-align: center;
+}
+
+.info-card h3 {
     padding-left: 10px;
-  }
-  
-  .flex p {
+}
+
+.info-card p {
     text-align: center;
     background-color: #6c52b3;
-    color: #37c2fd;
+    color: #df61ee;
     padding: 20px;
     margin: 0;
     border-radius: 0px 0px 20px 20px;
-  }
-  .flex img {
+}
+
+.info-card img {
     max-height: 400px;
     max-width: 400px;
-  }
- .flex h3, .flex li, .flex h2{
-    color: #37c2fd;
+}
+
+.info-card h3,
+.info-card li,
+.info-card h2 {
+    color: #df61ee;
+}
+
+.information,
+.leren {
+    height: 400px;
+    width: auto;
+    padding: 20px 200px 40px 200px;
+    margin-top: 80px;
+}
+
+.information h2 {
+    font-size: 30px;
+}
+
+.information ul,
+.leren ul {
+    margin-top: 20px;
+    display: flex;
+
+}
+
+.information ul li,
+.leren ul li {
+    padding: 10px;
+    width: 150px;
+    margin-right: 30px;
+    background-color: #183955;
+    box-shadow: 5px 10px #28284e;
+}
+
+#skills,
+#leren {
+    margin-top: 30px;
 }
