--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,7 @@
 
 body {
 
-    background: rgb(23, 57, 85);
-    background: linear-gradient(90deg, rgba(23, 57, 85, 1) 0%, rgba(40, 40, 78, 1) 100%);
+    background-color: #233150;
     font-family: Arial;
 }
 
@@ -35,6 +34,7 @@ ul {
 nav {
     background: rgb(23, 57, 85);
     background: linear-gradient(90deg, rgba(23, 57, 85, 1) 0%, rgba(40, 40, 78, 1) 100%);
+
     padding: 20px;
 }
 
@@ -44,6 +44,7 @@ nav a {
     font-size: 20px;
     font-weight: bold;
     padding: 20px;
+    transition: 0.3s;
 }
 
 nav a:hover {
@@ -58,6 +59,7 @@ header h1 {
 footer {
     margin-top: 80px;
     padding: 40px;
+    padding-left: 0;
     background: rgb(23, 57, 85);
     background: radial-gradient(circle, rgba(23, 57, 85, 1) 0%, rgba(40, 40, 78, 1) 100%);
 }
@@ -66,6 +68,7 @@ footer a {
     text-decoration: none;
     color: white;
     font-weight: bold;
+    margin-left: 200px;
 }
 
 header {
@@ -90,7 +93,7 @@ header {
 .hero h1 {
     font-size: 50px;
     font-weight: bold;
-    margin: 0 200px 0 200px;
+    margin: 0 20% 0 20%;
 
 }
 
@@ -98,9 +101,6 @@ header {
     font-size: 20px;
 }
 
-.flex {
-    display: flex;
-}
 
 .info-card {
     width: 400px;
@@ -152,6 +152,10 @@ ul li {
     color: #df61ee;
 }
 
+.information {
+    margin-bottom: 100px;
+}
+
 .information,
 .leren {
     height: 400px;
@@ -168,7 +172,8 @@ ul li {
 .leren ul {
     margin-top: 20px;
     display: flex;
-
+    flex-wrap: wrap;
+    width: 600px;
 }
 
 .information ul li,
@@ -176,6 +181,7 @@ ul li {
     padding: 10px;
     width: 150px;
     margin-right: 30px;
+    margin-bottom: 30px;
     background-color: #183955;
     box-shadow: 5px 10px #28284e;
 }
@@ -184,3 +190,225 @@ ul li {
 #leren {
     margin-top: 30px;
 }
+
+.information p {
+    margin-top: 10px;
+}
+
+.work {
+    margin: 100px 200px 0 200px;
+}
+
+.work h2,
+.work-text {
+    margin: 0 25% 0 25%;
+}
+
+.work-text {
+    margin-top: 30px;
+}
+
+.work h2,
+.work-text {
+    background-color: #183955;
+    text-align: center;
+    padding: 5px;
+    box-shadow: 5px 10px #28284e;
+}
+
+.projects {
+    display: flex;
+    margin-top: 80px;
+
+}
+
+.project {
+    background-color: #183955;
+    box-shadow: 5px 10px #28284e;
+    transition: 0.3s;
+    padding: 20px;
+}
+
+.project:hover {
+    background-color: #28284e;
+    box-shadow: 5px 10px #183955;
+}
+
+.one,
+.two {
+    margin-right: 30px;
+}
+
+@media screen and (min-width: 1440px) {
+    .flex {
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .info-card {
+        margin-top: 100px;
+    }
+    .projects {
+        flex-wrap: wrap;
+        
+    }
+    .project {
+        margin: 30px;
+    }
+}
+
+@media screen and (max-width: 1160px) {
+    header {
+        padding: 0px 100px 300px 100px;
+    }
+
+    .information,
+    .leren {
+        padding: 20px 100px 40px 100px;
+    }
+
+    .work {
+        padding: 100px 50px 40px 50px;
+        margin: 0 100px 0 100px;
+    }
+
+    .work h2,
+    .work-text {
+        margin: 0 15% 30px 15%;
+        
+    }
+    
+}
+@media screen and (max-width: 1024px) {
+    .hero h1 {
+        font-size: 42px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        padding: 0px 50px 300px 50px;
+    }
+    nav {
+        display: flex;
+        justify-content: center;
+    }
+    nav  {
+        padding: 0 20px 0 20px;
+    }
+
+    .information,
+    .leren {
+        padding: 20px 50px 40px 50px;
+    }
+
+    .work {
+        padding: 100px 50px 40px 50px;
+        margin: 0 50px 0 50px;
+    }
+
+    .work h2,
+    .work-text {
+        margin: 0 10% 30px 10%;
+        
+    }
+    .info-card {
+        margin-top: 200px;
+    }
+    
+}
+@media screen and (max-width: 691px) {
+    nav a {
+        font-size: 18px;
+    }
+    .hero {
+        height: 100px;
+    }
+    .hero h1 {
+        font-size: 30px;
+    }
+    .hero p {
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 650px ) {
+    .information ul,
+    .leren ul {
+       margin-right: 0;
+        width: auto;
+        justify-content: center;
+    }
+    .information {
+        text-align: center;
+    }
+    .info-card {
+        margin-top: 300px;
+    }
+    .work {
+        padding: 100px 20px 20px 20px;
+        margin: 0 20px 0 20px;
+    }
+
+    .work h2,
+    .work-text {
+        margin: 0 8% 30px 8%;
+        
+    }
+
+ }
+ @media screen and (max-width: 499px){
+    .information ul li
+     {
+        margin-right: 10px;
+    }
+ }
+ @media screen and (max-width: 459px){
+    .information ul li
+     {
+        margin-right: 10px;
+    }
+    .info-card {
+        margin-top: 450px;
+    }
+ }
+ @media screen and (max-width: 425px){
+    header {
+        padding: 0px 20px 300px 20px;
+    }
+    .info-card {
+        margin-top: 350px;
+        max-width: 300px;
+    }
+    .info-card img {
+        max-width: 300px;
+        max-height: 300px;
+    }
+    .work {
+        padding: 100px 20px 20px 20px;
+        margin: 0;
+    }
+    .information,
+    .leren {
+        padding: 20px 20px 40px 20px;
+    }
+ }
+ @media screen and (max-width: 410px){
+    .info-card {
+        width: auto;
+    }
+    .info-card img {
+        max-width: auto;
+        max-height: auto;
+    }
+ }
+ @media screen and (max-width: 399px) {
+    .info-card{
+        margin-top: 650px;
+    }
+ }
+ @media  screen and (max-width:350px) {
+    nav a{
+        font-size: 15px;
+    }
+ }
