--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ footer {
     padding: 40px;
     padding-left: 0;
     background: rgb(23, 57, 85);
-    background: radial-gradient(circle, rgba(23, 57, 85, 1) 0%, rgba(40, 40, 78, 1) 100%);
+    background: radial-gradient(circle, rgba(23, 57, 85, 1) 0%, rgba(40, 40, 278, 1) 100%);
 }
 
 footer a {
@@ -186,6 +186,15 @@ ul li {
     box-shadow: 5px 10px #28284e;
 }
 
+.project-img {
+    height: 500px;
+}
+.project-height {
+    height: auto;
+    
+}
+
+
 #skills,
 #leren {
     margin-top: 30px;
@@ -233,7 +242,8 @@ ul li {
 
 .project img {
     width: 300px;
-    height: 200px;
+    height: 250px;
+    object-fit: cover;
 }
 
 .project h3 {
